Fix suggestions and add better privacy settings
